--- a/02-making-scatterplot/index.html
+++ b/02-making-scatterplot/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Timeline</title>
+  <title>Scatterplot</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
   <div id="wrapper"></div>
 
-  <script src="../d3.v5.js"></script>
-  <script src="./chart.js"></script>
+  <script src="./draw-scatter.js"></script>
 </body>
 
 </html>
