--- a/02-making-scatterplot/index.html
+++ b/02-making-scatterplot/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="wrapper"></div>
 
+  <script src="../d3.v5.js"></script>
   <script src="./draw-scatter.js"></script>
 </body>
 
