--- a/03-making-bar-chart/index.html
+++ b/03-making-bar-chart/index.html
@@ -12,7 +12,9 @@
   <div id="wrapper"></div>
 
   <script src="../d3.v5.js"></script>
-  <script src="./draw-bars.js"></script>
+  <!-- <script src="./draw-bars.js"></script> -->
+  <!-- <script src="./index.js"></script> -->
+  <script src="./multiple.js"></script>
 </body>
 
 </html>
