--- a/06-making-a-map/1/index.html
+++ b/06-making-a-map/1/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="wraper"></div>
+  <div id="wrapper"></div>
 
   <div id="tooltip" class="tooptip">
     <div class="tooltip-country"></div>
