--- a/06-making-a-map/1/index.html
+++ b/06-making-a-map/1/index.html
@@ -14,7 +14,8 @@
   <div id="tooltip" class="tooptip">
     <div class="tooltip-country"></div>
     <div class="tool-value">
-      <span id="value"></span> population change
+      <span id="value"></span>
+      population change
     </div>
   </div>
 
