--- a/06-making-a-map/1/index.html
+++ b/06-making-a-map/1/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-  <div id="wrapper"></div>
+  <div id="wrapper" class="wrapper"></div>
 
-  <div id="tooltip" class="tooptip">
-    <div class="tooltip-country"></div>
-    <div class="tool-value">
+  <div id="tooltip" class="tooltip">
+    <div class="tooltip-country" id="country"></div>
+    <div class="tooltip-value">
       <span id="value"></span>
       population change
     </div>
