complete radar-chart

--- a/08-common-charts/02-heatmap/index.html
+++ b/08-common-charts/02-heatmap/index.html
@@ -21,7 +21,9 @@
   <div id="wrapper" class="wrapper"></div>
 
   <script src="./../../d3.v5.js"></script>
-  <script src="./chart.js"></script>
+  <!-- <script src="./chart.js"></script>
+ -->
+  <script src="./complete.js"></script>
 </body>
 
 </html>
