--- a/10-marginal-histogram/index.html
+++ b/10-marginal-histogram/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <h2 class="title">Daily Temperature Ranges</h2>
+  <div class="description">Daily minimum and maximum temperatures in New York City in 2018</div>
+
   <div id="wrapper"></div>
 
   <script src="./../d3.v5.js"></script>
